# myelectricaldata_new

./: .env.local-client.example  .env.local.example  .gitignore  .releaserc-helm.yaml  .releaserc.yaml  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DEMO_ACCOUNT_ARCHITECTURE.md  DEMO_GUIDE_INDEX.md  Makefile  README.md  conductor.json  dev.sh  docker-compose.client.yml  docker-compose.dev.yml  docker-compose.server.yml  docker-compose.yml  package-lock.json  package.json  prod.sh  watch-backend.sh
apps/api/: Dockerfile  Makefile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 20251201_0100_001_initial_schema.py  20251201_0200_002_add_pricing_option_to_pdls.py  20251202_0100_003_add_selected_offer_id_to_pdls.py  20251205_0100_004_add_contribution_messages_table.py  20251211_2100_006_add_offer_url_to_energy_offers.py  20251220_0100_007_add_admin_data_sharing.py  20251230_0100_008_create_client_mode_tables.py  20260101_2313_5f1308fff153_add_export_scheduling_fields.py  20260111_2330_048bdc8487a5_add_consumptionfrance_and_.py  20260122_2011_ed8dbde4cf0a_add_power_variants_to_offercontribution.py  20260122_2012_8bd437e7efe0_add_valid_from_date_to_offercontribution.py  20260125_2328_816c3fbad213_add_pricing_types_table.py  20260126_0013_remove_pricing_types_table.py  20260216_1230_add_max_power_data_table.py  (+1 more)
apps/api/migrations/: add_contract_end_date.py  add_linked_production_pdl_id.py  add_oldest_available_data_date.py  rename_contract_end_date_to_activation_date.py  update_alpiq_scraper_url.py
apps/api/scripts/: generate_demo_account.py  test_slack_notification.py
apps/api/src/: logging_config.py  main.py  scheduler.py
apps/api/static/: swagger-custom.css
(+604 files in other folders)
